--- a/viagorb/WebContent/WEB-INF/html/home.html
+++ b/viagorb/WebContent/WEB-INF/html/home.html
@@ -9,12 +9,16 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-
+<div class="container-fluid">
+<div class="row">
+    <div class="col-4">
+    </div>
+      <div class="col-4">
 <form action="welcome" method="post">
   <div class="form-group">
     <label for="exampleInputEmail1">User Name</label>
     <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter User name">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your username with anyone else.</small>
+    <small id="emailHelp" class="form-text text-muted">We'll never share your  with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
@@ -26,5 +30,9 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
   </form>
+  </div>
+    <div class="col-4"></div>
+  </div>
+  </div>
 </body>
 </html>
